[feature/add-database-seeding] feat(db): add database seeding script
